# pico_robot_miet

./: CMakeLists.txt  ozone_v1.jdebug
.cache/clangd/index/: Bobla_6612_motor_lib.c.2F56B83A94F0B136.idx  Bobla_6612_motor_lib.c.E761413E540BC0BF.idx  Bobla_6612_motor_lib.c.EB9976CD3DEBCFAE.idx  Bobla_6612_motor_lib.h.1A75176B9E3B78B9.idx  Bobla_6612_motor_lib.h.240C9B543D841103.idx  Bobla_6612_motor_lib.h.6CC6F5EB0A201556.idx  Bobla_6lib_sensor_lib.c.36DB64D0396345C2.idx  Bobla_6lib_sensor_lib.c.4795EB62AE263FAE.idx  Bobla_6lib_sensor_lib.h.2B5EC34BEE17FBA3.idx  Bobla_6lib_sensor_lib.h.7925C027DE046040.idx  Bobla_digital_sensor_lib.c.8040787D66C1586E.idx  Bobla_digital_sensor_lib.c.8B7B17BC4EDA3B58.idx  Bobla_digital_sensor_lib.h.ACF5CC41F92E1E6E.idx  Bobla_digital_sensor_lib.h.FE5AFA3EBF35B258.idx  Bobla_encoder_lib.c.26386AD34DA28CB3.idx  Bobla_encoder_lib.c.520E3631F1AFD7D6.idx  Bobla_encoder_lib.c.58B135390A8821CB.idx  Bobla_encoder_lib.h.1F8CA4E0314B6C80.idx  Bobla_encoder_lib.h.3D21BAE1B1E6CE78.idx  Bobla_encoder_lib.h.C28F103942DC665C.idx  Bobla_sensor_line_lib.c.1EB63BE8FC92465E.idx  Bobla_sensor_line_lib.c.2833AC0CE9ACB88A.idx  Bobla_sensor_line_lib.c.5F565321E3FD7203.idx  Bobla_sensor_line_lib.h.482707BA870A914D.idx  Bobla_sensor_line_lib.h.E0A20F54486DDED2.idx  Bobla_sensor_line_lib.h.FE18FD87B1234F0C.idx  driver_motor_encoder.c.2779C5102573DF63.idx  driver_motor_encoder.c.B249998FB12ACBEF.idx  driver_motor_encoder.c.D6BC1BEB526730E0.idx  driver_motor_encoder.h.09A8E506E85F750F.idx  driver_motor_encoder.h.214EB4FC70338DD4.idx  driver_motor_encoder.h.B2C335267BE57229.idx  lib_bl.c.F1B2B29688404D6D.idx  main.c.252EE480D0A01BE2.idx  main.c.5E4AA21800F27E6A.idx  main.c.98BC767D369D8238.idx  move_on_line.c.1030AEA83BEE90C2.idx  move_on_line.c.242AD7828D44E9A3.idx  move_on_line.c.310FD30588CF7E10.idx  move_on_line.h.16AE06DC0CFA5B73.idx  (+2 more)
3d model/: rrr2.SLDPRT  rrr2.STL  ккк1.SLDPRT  ккк1.STL
inc/: driver_motor_encoder.h  enkoder.h  motor_robot.h  move_on_line.h
lib/Bobla_6612_motor_lib/: CMakeLists.txt
lib/Bobla_6612_motor_lib/inc/: Bobla_6612_motor_lib.h
lib/Bobla_6612_motor_lib/src/: Bobla_6612_motor_lib.c
lib/Bobla_6lib_sensor_lib/: CMakeLists.txt
lib/Bobla_6lib_sensor_lib/inc/: Bobla_6lib_sensor_lib.h
lib/Bobla_6lib_sensor_lib/src/: Bobla_6lib_sensor_lib.c
lib/Bobla_brawls_sensor_lib/: CMakeLists.txt
lib/Bobla_brawls_sensor_lib/inc/: Bobla_brawls_sensor_lib.h
lib/Bobla_brawls_sensor_lib/src/: Bobla_brawls_sensor_lib.c
lib/Bobla_digital_sensor_lib/: CMakeLists.txt
lib/Bobla_digital_sensor_lib/inc/: Bobla_digital_sensor_lib.h
lib/Bobla_digital_sensor_lib/src/: Bobla_digital_sensor_lib.c
lib/Bobla_encoder_lib/: CMakeLists.txt
lib/Bobla_encoder_lib/inc/: Bobla_encoder_lib.h
lib/Bobla_encoder_lib/src/: Bobla_encoder_lib.c
lib/Bobla_sensor_line_lib/: CMakeLists.txt
lib/Bobla_sensor_line_lib/inc/: Bobla_sensor_line_lib.h
lib/Bobla_sensor_line_lib/src/: Bobla_sensor_line_lib.c
lib/lib_bl/: CMakeLists.txt
lib/lib_bl/inc/: lib_bl.h
lib/lib_bl/src/: lib_bl.c
lib/test_lib1/: CMakeLists.txt
lib/test_lib1/inc/: lib1.h
lib/test_lib1/src/: lib1.c
src/: CMakeCache.txt  cmake_install.cmake  driver_motor_encoder.c  driver_motor_encoder.h  enkoder.c  enkoder.h  lib1.c  main.c  motor_dc_pwm.c  motor_dc_pwm.h  motor_robot.c  motor_robot.h  move_on_line.c  move_on_line.h  sensor.c  sensor.h
